fix fixed popovers not showing up

--- a/client/assets/styles/scss/popover/popover-fixed.scss
+++ b/client/assets/styles/scss/popover/popover-fixed.scss
@@ -1,8 +1,9 @@
+// override default popover behavior
 .popover-fixed {
   left: 0 !important;
   margin: 0 auto;
   max-width: 630px;
-  position: fixed;
+  position: fixed !important;
   right: 0 !important;
   top: calc(9% + 90px) !important;
   z-index: $z-popover-fixed;
